deployments/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: sample-api-svc
  namespace: default
  labels:
    app: sample-api
spec:
  type: ClusterIP
  selector:
    app: sample-api
  ports:
  - port: 8080
    name: "http"
    protocol: TCP
